updated based on the comments